fix htcondor release

--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1802,7 +1802,7 @@ node_types:
         default: "dodasts/ttscache"
     artifacts:
       htcondor_config_role:
-        file: indigo-dc.htcondor_config,v1.0.0-rc5
+        file: indigo-dc.htcondor_config,v1.0.0-dodas-rc5
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
