--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1751,11 +1751,18 @@ node_types:
         type: string
         description: INDIGO IAM client secret
         required: yes
-      iam_group:
+      iam_map_client_id:
         type: string
         required: no
-        description: IAM group to be authorized for this resources (defualt ALL)
-        default: "ALL"
+        default: DUMMY
+      iam_map_client_secret:
+        type: string
+        required: no
+        default: DUMMY
+      iam_map_group:
+        type: string
+        required: no
+        default: ALL
       marathon_username:
         type: string
         required: no
@@ -1834,7 +1841,9 @@ node_types:
             config_iam_token: { get_property: [ SELF, iam_access_token ] }
             config_iam_client_id: { get_property: [ SELF, iam_client_id ] }
             config_iam_client_secret: { get_property: [ SELF, iam_client_secret ] }
-            config_iam_group: { get_property: [ SELF, iam_group ] }
+            iam_map_client_id: { get_property: [ SELF, iam_map_client_id ] }
+            iam_map_client_secret: { get_property: [ SELF, iam_map_client_secret ] }
+            iam_map_group: { get_property: [ SELF, iam_map_group ] }
             config_proxycache_image: { get_property: [ SELF, proxycache_image ]}
     requirements:
       - host:
