--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -1098,7 +1098,7 @@ node_types:
         type: map
         entry_schema:
           type: string
-      priviliged:
+      privileged:
         required: no
         type: boolean
         default: false
@@ -1127,7 +1127,7 @@ node_types:
         required: no
         type: string
         default: PT10S
-      priviliged:
+      privileged:
         required: no
         type: boolean
         default: true
@@ -2317,3 +2317,24 @@ node_types:
           implementation: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/artifacts/indigovr/vrouter_install.yml
           inputs:
             INDIGOVR_CENTRALPOINT_IP: { get_attribute: [ SELF, central_point, ip_address ] }
+
+policy_types:
+  tosca.policies.indigo.SlaPlacement:
+    derived_from: tosca.policies.Placement
+    properties:
+      sla_id:
+        required: true
+        type: string
+
+  tosca.policies.indigo.CredentialsAwareSlaPlacement:
+    derived_from: tosca.policies.indigo.SlaPlacement
+    properties:
+      username:
+        required: true
+        type: string
+      password:
+        required: true
+        type: string
+      subscription_id:
+        required: false
+        type: string
