--- a/custom_types.yaml
+++ b/custom_types.yaml
@@ -396,7 +396,7 @@ node_types:
         file: indigo-dc.nfs
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role:
-        file: indigo-dc.galaxycloud
+        file: indigo-dc.galaxycloud,fixes
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
@@ -451,7 +451,7 @@ node_types:
         file: indigo-dc.galaxycloud-os,vault
         type: tosca.artifacts.AnsibleGalaxy.role
       galaxy_role:
-        file: indigo-dc.galaxycloud
+        file: indigo-dc.galaxycloud,fixes
         type: tosca.artifacts.AnsibleGalaxy.role
     interfaces:
       Standard:
