--- a/artifacts/galaxy/galaxy_redfata_configure.yml
+++ b/artifacts/galaxy/galaxy_redfata_configure.yml
@@ -9,16 +9,16 @@
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_key_file }}'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs'
+      when: refdata_cvmfs_configuration == 'cvmfs'
     - name: Get reference data cvmfs key for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_keys/{{ refdata_cvmfs_repository_name }}.pub'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs_preconfigured'
+      when: refdata_cvmfs_configuration == 'cvmfs_preconfigured'
     - name: Get reference data cvmfs configuration for preconfigured repository
       get_url:
         url: 'https://raw.githubusercontent.com/indigo-dc/Reference-data-galaxycloud-repository/master/cvmfs_server_config_files/{{ refdata_cvmfs_repository_name }}.conf'
         dest: '/tmp'
-      when: refdata_provider_type == 'cvmfs_preconfigured'
+      when: refdata_cvmfs_configuration == 'cvmfs_preconfigured'
   roles:
     - role: indigo-dc.galaxycloud-refdata
