--- a/examples/hybrid_elastic_cluster_vr_l2_add.yaml
+++ b/examples/hybrid_elastic_cluster_vr_l2_add.yaml
@@ -2,7 +2,7 @@ tosca_definitions_version: tosca_simple_yaml_1_0
 
 imports:
   - indigo_custom_types: https://raw.githubusercontent.com/indigo-dc/tosca-types/devel/custom_types.yaml
- 
+
 description: >
   TOSCA test for launching a Virtual Elastic Cluster. It will launch
   a single front-end that will be in change of managing the elasticity
@@ -66,7 +66,7 @@ topology_template:
       type: tosca.nodes.network.Network
       properties:
         cidr: '192.168.10.0/24'
-        gateway_ip: '192.168.0.0/16,vr1_compute'
+        gateway_ip: '192.168.0.0/16,lrms_server'
         network_type: private
 
     server_port:
@@ -84,14 +84,6 @@ topology_template:
       requirements:
         - binding: lrms_wn
         - link: network2
-
-    router1_port:
-      type: tosca.nodes.network.Port
-      properties:
-        order: 0
-      requirements:
-        - binding: vr1_compute
-        - link: network1
 
     network2:
       type: tosca.nodes.network.Network
@@ -167,7 +159,7 @@ topology_template:
       requirements:
         - host: lrms_wn
         - dependency: indigovr_router2
-        - dependency: indigovr_router1
+        - dependency: indigovr_cp
 
     lrms_wn:
       type: tosca.nodes.indigo.Compute
@@ -183,26 +175,6 @@ topology_template:
           properties:
               type: linux
               image: ost://horsemen.i3m.upv.es/877c4fad-34cf-4422-a565-8bb6e10c3bec
-
-    indigovr_router1:
-      type: tosca.nodes.indigo.VR.VRouter
-      requirements:
-        - central_point:
-            node: indigovr_cp
-        - host:
-            node: vr1_compute
-
-    vr1_compute:
-      type: tosca.nodes.indigo.Compute
-      capabilities:
-        host:
-          properties:
-            num_cpus: 1
-            mem_size: 1 GB
-        os:
-          properties:
-              image: ost://horsemen.i3m.upv.es/877c4fad-34cf-4422-a565-8bb6e10c3bec
-              type: linux
 
     indigovr_router2:
       type: tosca.nodes.indigo.VR.VRouter
